--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
+<h1> open app </h1>
      <a href="my.special.scheme://other/parameters/here">
 
 </body>
