--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1> open app </h1>
-     <a href="my.special.scheme://other/parameters/here">
+     <a href="https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp">
 
 </body>
 </html>
