--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
+window.open("https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp");
+
 <h1> open app </h1>
-     <a href="https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp">
 
 </body>
 </html>
