--- a/index.html
+++ b/index.html
@@ -2,12 +2,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body> 
-window.open("https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp");
+    <title>Open app</title>
+    <script>
+         
+        // Cross-browser Page Visibility API
+var hidden, visibilityChange;
 
-<h1> open app </h1>
+if (typeof document.hidden !== "undefined") { // Standard
+    hidden = "hidden";
+    visibilityChange = "visibilitychange";
+} else if (typeof document.msHidden !== "undefined") { // Internet Explorer
+    hidden = "msHidden";
+    visibilityChange = "msvisibilitychange";
+} else if (typeof document.webkitHidden !== "undefined") { // WebKit/Blink
+    hidden = "webkitHidden";
+    visibilityChange = "webkitvisibilitychange";
+}
+
+// Add an event listener to handle visibility change
+document.addEventListener(visibilityChange, function () {
+    if (document[hidden]) {
+        // The page is now hidden (user switched to another tab or minimized the window)
+        // You can perform actions like pausing animations, stopping video playback, etc.
+        console.log("Page is now hidden");
+        displayToast("hidden")
+        
+
+    } else {
+        // The page is now visible (user returned to the tab)
+        // You can resume any paused activities here
+        console.log("Page is now visible");
+        displayToast("visible")
+        window.location.href = "https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp";
+
+    }
+});
+
+// Initial check to see if the page is hidden on page load
+if (document[hidden]) {
+    console.log("Page is hidden on load");
+} else {
+    console.log("Page is visible on load");
+}
+function displayToast(message) {
+  // Create a toast element.
+  var toast = document.createElement("div");
+  toast.className = "toast";
+  toast.innerText = message;
+  // Append the toast element to the document body.
+  document.body.appendChild(toast);
+
+  // Set a timeout to remove the toast element after 2 seconds.
+  setTimeout(function() {
+    document.body.removeChild(toast);
+  }, 2000);
+}
+
+
+    </script>
+
+
+</head>
+<body>
+    <p>it seems like you have not installed whirlpool app, click here to download, <a href="https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp">click here</a>.</p>
 
 </body>
 </html>
