--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
  
 </head>
 <body>
-    <p>it seems like you have not installed whirlpool app, click here to download, <a href="https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp">click here</a>.</p>
-
+<h1>Open app</h1>
 </body>
 </html>
