--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <h1>Open app</h1>
+  window.location.href = "https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp" 
 </body>
 </html>
