--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Open app</title>
- 
+ <script>
+     window.location.href = "https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp" 
+ </script>
 </head>
 <body>
 <h1>Open app</h1>
-  window.location.href = "https://play.google.com/store/apps/details?id=com.whirlpool.android.wpapp" 
 </body>
 </html>
